--- a/src/css/header.css
+++ b/src/css/header.css
@@ -16,10 +16,11 @@
 }
 
 .nav__logo {
+  color: var(--title-color);
   font-weight: var(--font-semi-bold);
+  font-size: var(--h2-font-size);
 }
 
-.nav__logo,
 .nav__toggle {
   color: var(--title-color);
   font-weight: var(--font-medium);
@@ -48,7 +49,7 @@
 
 .active-link,
 .nav__link:hover {
-  color: var(--title-color-dark);
+  color: #ff5500;
 }
 
 @media screen and (max-width: 768px) {
@@ -66,7 +67,7 @@
     bottom: -100%;
     left: 0;
     width: 100%;
-    background-color: var(--body-color);
+    background-color: #fff;
     padding: 2rem 1.5rem 4rem;
     box-shadow: 0 -1px 4px rgba(0, 0, 0, 0.15);
     border-radius: 1.5rem 1.5rem 0 0;
@@ -98,7 +99,7 @@
   }
 
   .nav__close:hover {
-    color: var(--title-color-dark);
+    color: #ff5500;
   }
 
   .nav__toggle {
