--- a/src/css/About.css
+++ b/src/css/About.css
@@ -1,24 +1,6 @@
-.about__container {
-  grid-template-columns: repeat(2, 1 fr);
-  align-items: center;
-  justify-content: space-between;
-  column-gap: 2rem;
-}
-
-.about__img {
-  width: 250px;
-  height: 250px;
-  border-radius: 20px;
-  justify-self: center;
-}
-
-/* .about__data {
-  width: 500px;
-} */
-
 .about__info {
   grid-template-columns: repeat(3, 140px);
-  gap: 0.5rem;
+  gap: 1rem;
   margin-bottom: var(--mb-2);
 }
 
@@ -26,7 +8,7 @@
   background-color: #f6f6f6;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 0.7rem;
-  padding: 1rem;
+  padding: 0.6rem;
   text-align: center;
 }
 
@@ -37,15 +19,135 @@
 
 .about__title {
   font-size: 1rem;
-  font-weight: var(--font-medium);
+  font-weight: 600;
+  color: orangered;
 }
 
 .about__subtitle {
-  font-size: 0.7rem;
+  font-size: 0.8rem;
+  font-weight: 700;
 }
-
 .about__description {
-  padding: 0 4rem 0 0;
   text-align: justify;
   margin-bottom: var(--mb-2);
+  font-weight: 500;
+  font-size: 0.8rem;
+  width: 450px;
+}
+
+.about__container {
+  display: grid;
+  column-gap: 2rem; /* Space between image and text */
+  align-items: center;
+}
+
+.about__content {
+  grid-template-columns: repeat(2, 1fr);
+  column-gap: 2rem;
+  align-items: center;
+  display: grid;
+}
+
+.about__img {
+  background: url(../asset/poto.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  width: 250px;
+  height: 250px;
+  box-shadow: inset 0 0 0 8px rgb(255 255 255 / 30%);
+  justify-self: center;
+  /* order: 1; */
+  animation: profile__animate 8s ease-in-out infinite 1s;
+}
+
+@keyframes profile__animate {
+  0% {
+    border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
+  }
+  50% {
+    border-radius: 30% 60% 70% 40%/50% 60% 30% 60%;
+  }
+  100% {
+    border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
+  }
+}
+
+@media screen and (max-width: 992px) {
+  .about__container {
+    display: grid;
+    column-gap: 1rem; /* Space between image and text */
+    align-items: center;
+    row-gap: 2rem;
+  }
+  .about__content {
+    grid-template-columns: 400px repeat(2, 1fr);
+    gap: 2rem;
+    /* display: flex;
+    flex-direction: column; */
+    justify-content: center;
+    align-items: center;
+  }
+
+  .about__description {
+    width: 500px;
+  }
+
+  .about__img {
+    width: 250px;
+    height: 250px;
+    box-shadow: inset 0 0 0 8px rgb(255 255 255 / 30%);
+  }
+
+  .about__data {
+    justify-content: center;
+    align-items: center; /* Center text on smaller screens */
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .about__container {
+    justify-content: center;
+    align-items: center;
+  }
+  .about__content {
+    grid-template-columns: 1fr;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .about__img {
+    /* order: initial; */
+    /* justify-self: initial; */
+    justify-content: center;
+    align-items: center;
+    width: 180px;
+    height: 180px;
+    box-shadow: inset 0 0 0 6px rgb(255 255 255 / 30%);
+  }
+
+  .about__data {
+    /* grid-template-columns: repeat(3, 140px); */
+    gap: 1rem;
+    margin-bottom: var(--mb-2);
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+  }
+
+  .about__description {
+    width: 500px;
+    justify-content: center;
+    align-items: center;
+    text-align: justify;
+    padding: 0 1.5rem;
+  }
+
+  .about__info {
+    grid-template-columns: repeat(3, 140px);
+    gap: 1rem;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: var(--mb-2);
+  }
 }
