--- a/src/css/About.css
+++ b/src/css/About.css
@@ -151,3 +151,25 @@
     margin-bottom: var(--mb-2);
   }
 }
+
+@media screen and (max-width: 350px) {
+  .about__img {
+    width: 180px;
+    height: 180px;
+    box-shadow: inset 0 0 0 4px rgb(255 255 255 / 30%);
+  }
+
+  .about__info {
+    grid-template-columns: repeat(1, 120px);
+    gap: 1rem;
+    justify-content: center;
+    align-items: center;
+  }
+  .about__description {
+    width: auto;
+    justify-content: center;
+    align-items: center;
+    text-align: justify;
+    padding: 0 1.5rem;
+  }
+}
