--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -17,7 +17,8 @@
 
 .home__social-icon {
   font-size: 1.25rem;
-  color: var(--title-color);
+  font-weight: 500;
+  color: #222222;
 }
 
 .home__social-icon:hover {
@@ -204,5 +205,13 @@
     width: 180px;
     height: 180px;
     box-shadow: inset 0 0 0 4px rgb(255 255 255 / 30%);
+  }
+
+  .home__container {
+    padding: 1rem;
+  }
+
+  .home__description {
+    margin-bottom: 0.5rem;
   }
 }
