--- a/src/css/About.css
+++ b/src/css/About.css
@@ -170,6 +170,6 @@
     justify-content: center;
     align-items: center;
     text-align: justify;
-    padding: 0 1.5rem;
+    /* padding: 0 1.5rem; */
   }
 }
